[package]
name = "sieve_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
syn = { version = "2.0.39", features = ["parsing"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
